Generate debug meta information in LLVM backend
This will associate a DWARF "subprogram" section with every procedure
generated in the backend. This will carry a possibly useful source code
annotation if it is available (which can be read out by gdb or objdump).

--- a/compiler/ghc.cabal.in
+++ b/compiler/ghc.cabal.in
@@ -166,6 +166,7 @@ Library
         LlvmCodeGen.Ppr
         LlvmCodeGen.Regs
         LlvmMangler
+        LlvmMeta
         MkId
         Module
         Name
