Dependency on libdwarf

--- a/mk/config.mk.in
+++ b/mk/config.mk.in
@@ -364,6 +364,9 @@ PapiIncludeDir=
 # Include support for Linux perf_event?
 GhcRtsWithPerfEvent = @HavePerfEvent@
 
+# Include support for reading DWARF debugging information?
+GhcRtsWithDwarf = @HaveLibDwarf@
+
 ################################################################################
 #
 #		Paths (see paths.mk)
